fix accessibility contrast expense title

--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@
   -webkit-text-size-adjust: 100%;
   box-sizing: border-box;
   --primary: #1762df;
-  --secondary: #ff4f49;
+  --secondary: #9E0600;
   --text-color: #383a42;
   --white: #ffffff;
   --background-light: #f8f8f8;
